# weir

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml
.github/scripts/: pre-commit.js
.github/workflows/: ci.yml  release.yml
crates/weir/: Cargo.toml
crates/weir-metrics/: Cargo.toml
crates/weir-metrics/src/: lib.rs
crates/weir-ratelimit/: Cargo.toml
crates/weir-ratelimit/src/: bucket.rs  global.rs  invalid.rs  lib.rs  limiter.rs  memory.rs  protection.rs  queue.rs  route.rs
crates/weir-ratelimit/src/redis_backend/: mod.rs
crates/weir-ratelimit/src/redis_backend/scripts/: acquire.lua  bucket_only_acquire.lua  bucket_update.lua  cf_read.lua  cf_set_blocked.lua  global_429.lua  health_read.lua  health_record_error.lua  health_record_success.lua  track_invalid.lua  update_response.lua
crates/weir-ratelimit/tests/: redis_integration.rs
crates/weir/src/: config.rs  error.rs  health.rs  main.rs  proxy.rs  request.rs  response.rs  server.rs
docker/: config.cluster.toml  nginx.conf  prometheus.yml
docker/grafana/provisioning/dashboards/: weir.yml
grafana/: weir-dashboard.json
