[workspace]
resolver = "2"
members = [
    "crates/weir",
    "crates/weir-ratelimit",
    "crates/weir-metrics",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/xavin/weir"
homepage = "https://github.com/xavin/weir"
keywords = ["discord", "proxy", "ratelimit", "api"]
categories = ["network-programming", "web-programming"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

dashmap = "6"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"

metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }

weir-ratelimit = { path = "crates/weir-ratelimit" }
weir-metrics = { path = "crates/weir-metrics" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic exceptions
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
