[package]
name = "weir-metrics"
description = "Observability and metrics for the Weir Discord REST API proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
