[package]
name = "weir-ratelimit"
description = "Rate limit engine for the Weir Discord REST API proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
