[package]
name = "weir-ratelimit"
description = "Rate limit engine for the Weir Discord REST API proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
redis = ["dep:redis", "dep:anyhow", "dep:tracing", "dep:metrics"]
integration = ["redis"]

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
dashmap.workspace = true

redis = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
