[package]
name = "weir"
description = "A high-performance Discord REST API proxy with built-in rate limiting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
weir-ratelimit.workspace = true
weir-metrics.workspace = true

tokio.workspace = true
axum.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64.workspace = true
metrics.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
